[gd_scene load_steps=16 format=3 uid="uid://b8y1vgakc4pe8"]

[ext_resource type="Script" path="res://player/player.gd" id="1_m6368"]
[ext_resource type="Texture2D" uid="uid://b0txu1c7ljbex" path="res://resources/tank_bottom.png" id="3_gkc1w"]
[ext_resource type="Material" uid="uid://bmlfipq8v3dtj" path="res://levels/boostsprite.tres" id="4_ti74e"]
[ext_resource type="Script" path="res://player/PlayerStateMachine.gd" id="5_gpdq5"]
[ext_resource type="Script" path="res://states/invincible.gd" id="6_kugru"]
[ext_resource type="Script" path="res://states/default.gd" id="7_qkh3d"]
[ext_resource type="AudioStream" uid="uid://uajxdd8pdwac" path="res://resources/sounds/fire.wav" id="8_pmvid"]
[ext_resource type="AudioStream" uid="uid://bqdtj0xfifwug" path="res://resources/sounds/boostFinal.wav" id="9_dyrjj"]
[ext_resource type="AudioStream" uid="uid://cf0n3u7jsf40m" path="res://resources/sounds/hitHurtPlayer.wav" id="9_i4umc"]
[ext_resource type="PackedScene" uid="uid://btdnxt1co455k" path="res://items/Barb.tscn" id="11_r4lip"]
[ext_resource type="PackedScene" uid="uid://dwnrxr0uk664y" path="res://items/Cannon.tscn" id="12_guvje"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d0stc"]
size = Vector2(33, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ftfed"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_u7v3f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vmpi2"]
radius = 20.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_m6368")

[node name="TankTopPivot" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_d0stc")

[node name="TankBottomPivot" type="Node2D" parent="."]

[node name="TankBottom" type="Sprite2D" parent="TankBottomPivot"]
rotation = -1.57053
texture = ExtResource("3_gkc1w")

[node name="VisibilityArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisibilityArea"]
rotation = 0.00209715
shape = SubResource("RectangleShape2D_ftfed")

[node name="BoostParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_u7v3f")
position = Vector2(16, 5.96047e-08)
rotation = -3.18565
amount = 50
process_material = ExtResource("4_ti74e")
lifetime = 0.8

[node name="BumpZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BumpZone"]
position = Vector2(-7, 0)
shape = SubResource("CircleShape2D_vmpi2")

[node name="BloodLustTimer" type="Timer" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_gpdq5")
initial_state = NodePath("default")

[node name="invincible" type="Node" parent="StateMachine"]
script = ExtResource("6_kugru")

[node name="default" type="Node" parent="StateMachine"]
script = ExtResource("7_qkh3d")

[node name="audioFire" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_pmvid")
volume_db = -15.878

[node name="audioBoost" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_dyrjj")

[node name="audioDamaged" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_i4umc")

[node name="ItemGridContainer" type="GridContainer" parent="."]
offset_left = -17.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 18.0
columns = 3

[node name="Barb" parent="ItemGridContainer" instance=ExtResource("11_r4lip")]

[node name="Cannon" parent="ItemGridContainer" instance=ExtResource("12_guvje")]
position = Vector2(18, 0)

[connection signal="area_entered" from="BumpZone" to="." method="_on_bump_zone_area_entered"]
[connection signal="body_entered" from="BumpZone" to="." method="_on_bump_zone_body_entered"]
[connection signal="timeout" from="BloodLustTimer" to="." method="_on_blood_lust_timer_timeout"]
